# brphoto-metadata-tools

./: .gitignore  LICENSE  README.md  data.json  pyproject.toml  run-tests.sh
.github/workflows/: coverage.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5e96b83f9e715a73___init___py.html  z_5e96b83f9e715a73_write_description_metadata_py.html  z_f814e75aa8ca02ae_test_find_matching_files_py.html  z_f814e75aa8ca02ae_test_process_tsv_input_py.html  z_f814e75aa8ca02ae_test_select_preferred_path_py.html  z_f814e75aa8ca02ae_test_write_description_metadata_cli_py.html  z_f814e75aa8ca02ae_test_write_descriptions_py.html
write_apple_photos_video_metadata/: write_apple_photos_video_metadata.py
write_apple_photos_video_metadata/sample-files/: md-output-compressor.mov-tagnames.txt  md-output-compressor.mov.txt  md-reference-IMG_9873.MOV-tagnames.txt  md-reference-IMG_9873.MOV.txt  md-source-copy.mp4.txt  md-source-copy.xmp.txt  source-copy.XML  source-copy.xmp
write_description_metadata/: __init__.py  write_description_metadata.py
write_description_metadata/sample-files/: A7301382-created-by-exiftool.xmp  A7301382-written-by-c1.xmp  A7301382-written-by-exiftool-after-c1.xmp  A7301382-written-by-exiftool-after-pm (use for et xmp creation template).xmp  A7301382-written-by-lightroom.xmp  A7301382-written-by-pm.xmp  affinity-photo-10x10.json  notes.txt  photoshop-save-as-10x10.json  photoshop-save-for-web-10x10.json  psd-not-recognized-by-c1.json  psd-recognized-by-c1.json  template.xmp
write_description_metadata/tests/: test_find_matching_files.py  test_process_tsv_input.py  test_select_preferred_path.py  test_write_description_metadata_cli.py  test_write_descriptions.py
write_description_metadata/tests/fixtures/sample-files/: IMG_0002-write_md-file-scan-missed-xmp.XMP  IMG_0003-write_md-xmp-no-desc.XMP  IMG_0005-write_md-heic-no-desc.HEIC  IMG_0006-write_md-xmp-existing-eq-desc.XMP  IMG_0007-write_md-xmp-existing-ne-desc.XMP
