[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "brphoto-metadata-tools"
version = "0.1.0"
authors = [
    {name = "Brandon Rodkewitz", email = "brandon@brphotographs.com"}
]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pyexiftool>=0.5.6",
]

[dependency-groups]
dev = [
    "pip-licenses>=5.0.0",
]

