[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "brphoto-metadata-tools"
version = "1.1.0"
authors = [
    {name = "Brandon Rodkewitz", email = "brandon@brphotographs.com"}
]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pyexiftool>=0.5.6",
]

[dependency-groups]
dev = [
    "pip-licenses>=5.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
markers = [
    "orig_find_matching_files: Run this test using the real find_matching_files function",
]
# Always run pytest with pytest-cov
addopts = "--cov-config=pyproject.toml --cov=write_description_metadata --cov-branch --cov-report=term-missing"

# For GitHub coverage action, so .coverage file paths are valid in the
# workflow's environment
[tool.coverage.run]
relative_files = true
